--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,5 @@
     "background": {
         "service_worker": "background.js"
     },
-    "permissions": ["storage"]
+    "permissions": ["storage", "activeTab", "scripting"]
 }
