--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
         "128": "/images/get_started128.png"
     },
     "background": {
-        "service_worker": "background.js"
+        "service_worker": "background.js",
+        "service_worker2": "text.js"
     },
     "options_page": "options.html",
     "permissions": [
