--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,27 @@
 {
+    "manifest_version": 2,
     "name": "Web Wizard",
     "version": "1.0",
-    "description": "Build an Extension!",
-    "manifest_version": 3,
-    "action": {
-        "default_popup": "popup.html",
-        "default_icon": {
-            "16": "/images/get_started16.png",
-            "32": "/images/get_started32.png",
-            "48": "/images/get_started48.png",
-            "128": "/images/get_started128.png"
-        }
-    },
+    "description": "Adds a red border to all webpages matching mozilla.org.",
     "icons": {
         "16": "/images/get_started16.png",
         "32": "/images/get_started32.png",
         "48": "/images/get_started48.png",
         "128": "/images/get_started128.png"
     },
-    "background": {
-        "service_worker": "background.js",
-        "service_worker2": "text.js"
-    },
-    "options_page": "options.html",
+    
     "permissions": [
-        "storage",
-        "activeTab",
-        "scripting",
-        "tabs"
-    ]
-}
+        "activeTab"
+    ],
+
+   "browser_action": {
+    "default_icon": "/images/get_started16.png",
+    "default_title": "Beastify",
+    "default_popup": "popup/choose_beast.html"
+  },
+
+  "web_accessible_resources": [
+    "beasts/*.jpg"
+  ]
+
+  }
