--- a/manifest.json
+++ b/manifest.json
@@ -16,11 +16,10 @@
     ],
     "content_scripts": [
         {
-            "matches": [
-                "*://*.mozilla.org/*"
-            ],
+            "matches": ["<all_urls"],
             "js": [
-                "popup.js"
+                "./popup.js",
+                "./substitute.js"
             ]
         }
     ],
