--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,5 @@
 {
     "manifest_version": 2,
-
- 
     "name": "Web Wizard",
     "version": "1.0",
     "description": "Adds a red border to all webpages matching mozilla.org.",
@@ -11,14 +9,15 @@
         "48": "/images/get_started48.png",
         "128": "/images/get_started128.png"
     },
-
     "permissions": [
-        "activeTab"
+        "tabs",
+        "cookies",
+        "<all_urls>"
     ],
     "content_scripts": [
         {
             "matches": [
-                "*://*.mozilla.org/*"
+                "<all_urls>"
             ],
             "js": [
                 "popup.js"
