--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,10 @@
         "default_popup": "popup.html"
     },
     "background": {
-        "scripts": ["background.js"]
+        "scripts": [
+            "background.js"
+        ]
+
     },
     "content_scripts": [
         {
@@ -32,5 +35,5 @@
             ]
         }
     ]
-  
+
 }
